Comments. Final methods. Final fields. Checkstyle conventions. valueOf() methods instead of new Integer() etc.