@@ -47,11 +47,11 @@ public class LDC_W extends VoidOperation
         Constant constant = constantPool[this.index];
         if (constant instanceof ConstantInteger)
         {
-            stack.push(new Integer(((ConstantInteger) constant).getValue()));
+            stack.push(Integer.valueOf(((ConstantInteger) constant).getValue()));
         }
         else if (constant instanceof ConstantFloat)
         {
-            stack.push(new Float(((ConstantFloat) constant).getValue()));
+            stack.push(Float.valueOf(((ConstantFloat) constant).getValue()));
         }
         else if (constant instanceof ConstantString)
         {
